WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258348
[CoordinatedGraphics] WebGL: the intermediate texture is no longer needed
https://bugs.webkit.org/show_bug.cgi?id=258348
Summary
[CoordinatedGraphics] WebGL: the intermediate texture is no longer needed
Carlos Garcia Campos
Reported
2023-06-21 03:49:27 PDT
It was introduced to fix flickering when we didn't wait for previous frame to be displayed to render the next one. Now, two textures should be enough.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-06-21 03:52:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15137
EWS
Comment 2
2023-06-21 06:47:36 PDT
Committed
265352@main
(241e71855ab5): <
https://commits.webkit.org/265352@main
> Reviewed commits have been landed. Closing PR #15137 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-21 06:48:17 PDT
<
rdar://problem/111100345
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug