[CoordinatedGraphics] WebGL: the intermediate texture is no longer needed https://bugs.webkit.org/show_bug.cgi?id=258348

Reviewed by Miguel Gomez.

It was introduced to fix flickering when we didn't wait for previous
frame to be displayed to render the next one. Now, two textures should
be enough.

* LayoutTests/platform/glib/inspector/canvas/recording-webgl-full-expected.txt:
* Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp:
(WebCore::GraphicsContextGLTextureMapperANGLE::~GraphicsContextGLTextureMapperANGLE):
(WebCore::GraphicsContextGLTextureMapperANGLE::platformInitialize):
(WebCore::GraphicsContextGLTextureMapperANGLE::prepareTexture):
(WebCore::GraphicsContextGLTextureMapperANGLE::reshapeDrawingBuffer):
* Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.h:

Canonical link: https://commits.webkit.org/265352@main